--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "sourceMap": true,
     "target": "es5",
-    "module": "es2015"
+    "module": "es2015",
+    "lib": ["es6"],
+    "downlevelIteration": true,
   }
 }
