--- a/package.json
+++ b/package.json
@@ -25,22 +25,23 @@
   },
   "homepage": "https://github.com/HasegawaMasahide/google-sites-notifier#readme",
   "devDependencies": {
-    "@google/clasp": "^2.1.0",
-    "@types/google-apps-script": "0.0.53",
-    "@types/jest": "24.0.13",
+    "@google/clasp": "^2.3.0",
+    "@types/google-apps-script": "1.0.14",
+    "@types/jest": "26.0.10",
     "cpx": "1.5.0",
-    "gas-webpack-plugin": "1.0.2",
-    "jest": "24.8.0",
-    "prettier": "1.18.2",
-    "rimraf": "2.6.3",
-    "ts-jest": "24.0.2",
-    "ts-loader": "6.0.2",
-    "tslint": "5.17.0",
+    "gas-webpack-plugin": "1.0.5",
+    "jest": "26.4.2",
+    "npm-check-updates": "^7.1.1",
+    "prettier": "2.1.0",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.2.0",
+    "ts-loader": "8.0.3",
+    "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.0.1",
-    "typescript": "3.5.1",
-    "webpack": "4.33.0",
-    "webpack-cli": "3.3.3"
+    "tslint-plugin-prettier": "2.3.0",
+    "typescript": "4.0.2",
+    "webpack": "4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "jest": {
     "transform": {
