--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/google-apps-script": "1.0.14",
     "@types/jest": "26.0.10",
     "cpx": "1.5.0",
+    "dotenv-webpack": "^2.0.0",
     "gas-webpack-plugin": "1.0.5",
     "jest": "26.4.2",
     "npm-check-updates": "^7.1.1",
