--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-sites-notifier",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,31 +18,31 @@
     "google-apps-script",
     "clasp"
   ],
-  "author": "howdy39",
+  "author": "HasegawaMasahide",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/HasegawaMasahide/google-sites-notifier/issues"
   },
   "homepage": "https://github.com/HasegawaMasahide/google-sites-notifier#readme",
   "devDependencies": {
-    "@google/clasp": "^2.3.0",
-    "@types/google-apps-script": "1.0.16",
-    "@types/jest": "26.0.14",
+    "@google/clasp": "^2.3.2",
+    "@types/google-apps-script": "1.0.34",
+    "@types/jest": "26.0.23",
     "cpx": "1.5.0",
-    "dotenv-webpack": "^2.0.0",
-    "gas-webpack-plugin": "1.2.0",
-    "jest": "26.4.2",
-    "npm-check-updates": "^9.0.1",
-    "prettier": "2.1.2",
+    "dotenv-webpack": "^7.0.3",
+    "gas-webpack-plugin": "2.0.2",
+    "jest": "27.0.4",
+    "npm-check-updates": "^11.6.0",
+    "prettier": "2.3.1",
     "rimraf": "3.0.2",
-    "ts-jest": "26.3.0",
-    "ts-loader": "8.0.3",
+    "ts-jest": "27.0.3",
+    "ts-loader": "9.2.3",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.3.0",
-    "typescript": "4.0.2",
-    "webpack": "4.44.2",
-    "webpack-cli": "^3.3.12"
+    "typescript": "4.3.2",
+    "webpack": "5.38.1",
+    "webpack-cli": "^4.7.2"
   },
   "jest": {
     "transform": {
